# socratic-path

./: .gitignore  ROADMAP.md  pyproject.toml  requirements.txt
docs/: training_decisions.md
frontend/: package-lock.json  package.json
notebooks/: 01_data_inspection.ipynb  02_preprocessing.ipynb  03_training.ipynb  04_evaluation.ipynb  05_keyphrase_extraction.ipynb  06_gemini_retrieval.ipynb  06_inference_pipeline.ipynb  06_vector_store_setup.ipynb  07_inference_pipeline.ipynb
scripts/: evaluate_model.py  plot_training_curves.py  run_all_training.sh  train_model.py
