[project]
name = "socratic-path"
version = "0.1.0"
description = "Socratic question generation with FLAN-T5 and LoRA fine-tuning"
requires-python = ">=3.10"

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "peft>=0.7.0",

    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "evaluate>=0.4.6",

    # Evaluation metrics
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "sacrebleu>=2.3.0",
    "nltk>=3.8.0",

    # Keyphrase extraction
    "keybert>=0.8.0",
    "sentence-transformers>=2.2.0",

    # Wikipedia retrieval
    "wikipedia-api>=0.6.0",

    # Backend
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",

    # Notebooks & visualisation
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
    "tensorboard>=2.15.0",
    "ipywidgets>=8.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }